<resources>
    <string name="app_name">Rs.fy</string>
    <string name="rs_fy">Rs.fy</string>
    <string name="logo">Logo</string>
    <string name="my_personal_budgeting_app">My Personal Budgeting App</string>
    <string name="enter_email">Enter Email</string>
    <string name="password">password</string>
    <string name="don_t_have_an_account_signup">Don\'t have an Account, signUp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="income_and_expenses">Income and expenses</string>
    <string name="savings">savings</string>
    <string name="expenses">expenses</string>
    <string name="more">more</string>
    <string name="income">income</string>
    <string name="my_income">My Income</string>
    <string name="my_income_goals">My Income Goals</string>
    <string name="history">History</string>
    <string name="today">Today</string>
    <string name="this_week">This Week</string>
    <string name="goal">Goal</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="extra">Extra</string>
    <string name="income_goal">Income Goal</string>
    <string name="this_month">This Month</string>
    <string name="analytics">Analytics</string>
    <string name="account_information">Account Information</string>
    <string name="useremail_gmail_com">useremail@gmail.com</string>
    <string name="month_income_anlytics">Month Income Anlytics</string>
    <string name="today_income_anlytics">Today Income Anlytics</string>
    <string name="week_income_anlytics">Week Income Anlytics</string>
    <string name="my_income_home">My Income</string>
    <string name="my_expense">My Expense</string>
    <string name="logopic">logopic</string>
    <string name="deisplyEmail">checking</string>
    <string name="loginoutact">logout</string>
    <string name="my_budget">My Budget</string>
    <string name="total_budget_amount_rs_0_00">Total Budget Amount : Rs. 0.00</string>
    <string name="fabiconinbudget">fabiconinbudget</string>
    <string name="anlyticscrdpic">anlyticscrdpic</string>
    <string name="month_expense_anlytics">Month Expense Anlytics</string>
    <string name="today_expense_anlytics_text">Today Expense Anlytics</string>
    <string name="week_expense_anlytics_txt">Week Expense Anlytics</string>
    <string name="todayanlytivpic">todayanlytivpic</string>
    <string name="weekanlyticspic">weekanlyticspic</string>
    <string name="today_my_spending_txt">Today My Spending</string>
    <string name="total_amount_rs_0_txt1">Total Amount: Rs.0</string>
    <string name="ststsred">ststsred</string>
    <string name="l_lt_50">L &lt; 50</string>
    <string name="greenstat">greenstat</string>
    <string name="_50_99">50% - 99%</string>
    <string name="brownstat">brownstat</string>
    <string name="g_100">G &lt; 100%</string>
    <string name="transport_s">Transport</string>
    <string name="t1rs_0">Rs .0</string>
    <string name="status1">status</string>
    <string name="tevelpic">tevelpic</string>
    <string name="todaye1">Today</string>
    <string name="food">Food</string>
    <string name="rs_0e2">Rs .0</string>
    <string name="status2">status</string>
    <string name="todayex1">Today</string>
    <string name="entertainmentt1">Entertainment</string>
    <string name="rs_0ex2">Rs .0</string>
    <string name="statusx3">status</string>
    <string name="todayex0">Today</string>
    <string name="home1">Home</string>
    <string name="rs_0ex6">Rs .0</string>
    <string name="statusex8">status</string>
    <string name="todayex98">Today</string>
    <string name="educationex98">Education</string>
    <string name="rs_0exu7">Rs .0</string>
    <string name="statusx098">status</string>
    <string name="todayexc78">Today</string>
    <string name="charityex879">Charity</string>
    <string name="rs_0ex98790">Rs .0</string>
    <string name="status_ex5678">status</string>
    <string name="todayexd5678">Today</string>
    <string name="health78990">Health</string>
    <string name="rs_0esx9867">Rs .0</string>
    <string name="statusopi890">status</string>
    <string name="personalex5678">Personal</string>
    <string name="rs_0ex456">Rs .0</string>
    <string name="statusx4678">status</string>
    <string name="todayex8908">Today</string>
    <string name="otherex0987">Other</string>
    <string name="rs_0ex45678">Rs .0</string>
    <string name="statusb6789">status</string>
    <string name="todayb567">Today</string>
    <string name="summary_of_spending23">Summary of Spending</string>
    <string name="total_spent_rs_0b12">Total Spent: Rs.0</string>
    <string name="statusb543">status</string>
    <string name="todayb12">Today</string>
    <string name="my_expensesl1">My expenses</string>
    <string name="budgetl1">Budget</string>
    <string name="todayl12">Today</string>
    <string name="weekl1">Week</string>
    <string name="monthl1">Month</string>
    <string name="in_pocketl1">In pocket</string>
    <string name="rs_0l1">Rs. 0</string>
    <string name="rs_0l3">Rs. 0</string>
    <string name="rs_0l4">Rs. 0</string>
    <string name="rs_0l23">Rs. 0</string>
    <string name="rs_0l678">Rs. 0</string>
    <string name="my_budgetl908">My Budget</string>
    <string name="todayl9867">Today</string>
    <string name="this_weekl456">This Week</string>
    <string name="this_monthl980">This Month</string>
    <string name="analyticsl9087">Analytics</string>
    <string name="historyl098">History</string>
    <string name="searchlex345">Search</string>
    <string name="_0_00loi">0.00</string>
    <string name="this_monthly_anlyticslt1">This MonthLy Anlytics</string>
    <string name="total_amount_rs_0lt2">Total Amount: Rs.0</string>
    <string name="l_50">L &lt; 50</string>
    <string name="h_50_99">50% - 99%</string>
    <string name="transportt234">Transport</string>
    <string name="rs_0c56">Rs .0</string>
    <string name="statusf567">status</string>
    <string name="this_monthv567">This Month</string>
    <string name="foodv678">Food</string>
    <string name="this_monthb567">This Month</string>
    <string name="statusn678">status</string>
    <string name="total_spent_rs_0tg567">Total Spent: Rs.0</string>
    <string name="summary_of_monthly_spendingn57">Summary of Monthly Spending</string>
    <string name="this_monthm789">This Month</string>
    <string name="statuso908">status</string>
    <string name="rs_0838me">Rs .0</string>
    <string name="other827me">Other</string>
    <string name="this_month793me">This Month</string>
    <string name="status771me">status</string>
    <string name="rs_0754me">Rs .0</string>
    <string name="personal742me">Personal</string>
    <string name="this_month709me">This Month</string>
    <string name="status687me">status</string>
    <string name="rs_0670me">Rs .0</string>
    <string name="health659me">Health</string>
    <string name="this_month626me">This Month</string>
    <string name="status604me">status</string>
    <string name="rs_0254me">Rs .0</string>
    <string name="status271me">status</string>
    <string name="this_month293me">This Month</string>
    <string name="entertainment326me">Entertainment</string>
    <string name="rs_0337me">Rs .0</string>
    <string name="status354me">status</string>
    <string name="rtg_100">G &lt; 100%</string>
    <string name="this_month376me">This Month</string>
    <string name="home409me">Home</string>
    <string name="rs_0420me">Rs .0</string>
    <string name="status437me">status</string>
    <string name="this_month459me">This Month</string>
    <string name="education493me">Education</string>
    <string name="rs_0504me">Rs .0</string>
    <string name="status521me">status</string>
    <string name="this_month543me">This Month</string>
    <string name="charity576me">Charity</string>
    <string name="rs_0587me">Rs .0</string>
    <string name="welcome16reg">Welcome</string>
    <string name="have_an_account_login93reg">have an account? Login</string>
    <string name="total_amount_rs_046ts">Total Amount: Rs.0</string>
    <string name="today_my_spending31ts">Today My Spending</string>
    <string name="my_week_s_spending24ws">My Week\'s Spending</string>
    <string name="total_week_amount_rs_0_00ws49">Total Week Amount : Rs. 0.00</string>
    <string name="this_week948wea">This Week</string>
    <string name="status931wes">status</string>
    <string name="my_week_spendingwea31">My Week Spending</string>
    <string name="total_amount_rs_0wea46">Total Amount: Rs.0</string>
    <string name="l_50wes82">L &lt;50%</string>
    <string name="was_50_99_102">50% - 99%</string>
    <string name="g_100wea122">G &lt;100%</string>
    <string name="transportwea161">Transport</string>
    <string name="rs_0wea172">Rs .0</string>
    <string name="statuswea189">status</string>
    <string name="this_weekwea211">This Week</string>
    <string name="foodwea244">Food</string>
    <string name="rs_0255wea">Rs .0</string>
    <string name="status272wea">status</string>
    <string name="this_week294wea">This Week</string>
    <string name="entertainment327wea">Entertainment</string>
    <string name="status438wea">status</string>
    <string name="this_week640wea">This Week</string>
    <string name="education494wea">Education</string>
    <string name="rs_0338wea">Rs .0</string>
    <string name="status355wea">status</string>
    <string name="this_week377wea">This Week</string>
    <string name="home410wea">Home</string>
    <string name="rs_0421wea">Rs .0</string>
    <string name="rs_0505wea">Rs .0</string>
    <string name="statuswas522">status</string>
    <string name="this_week544wea">This Week</string>
    <string name="charity577wea">Charity</string>
    <string name="rs_0588wea">Rs .0</string>
    <string name="status605wea">status</string>
    <string name="this_week627wea">This Week</string>
    <string name="health660wea">Health</string>
    <string name="rs_0671wea">Rs .0</string>
    <string name="status688wea">status</string>
    <string name="this_week710wea">This Week</string>
    <string name="personal743wea">Personal</string>
    <string name="rs_0755wea">Rs .0</string>
    <string name="status772wea">status</string>
    <string name="this_week794wea">This Week</string>
    <string name="other829wea">Other</string>
    <string name="rs_0840wea">Rs .0</string>
    <string name="status857ewa">status</string>
    <string name="this_week879wea">This Week</string>
    <string name="summary_of_weekly_spending925wea">Summary of Weekly Spending</string>
    <string name="goal_income_table">Goal</string>
    <string name="today_income_table">Today</string>
    <string name="week_income_table">Week</string>
    <string name="month_income_table">Month</string>
    <string name="extra_income_table">Extra</string>
    <string name="rs_0_income_table_goal">Rs. 0</string>
    <string name="rs_0_income_table_today">Rs. 0</string>
    <string name="rs_0_income_table_week">Rs. 0</string>
    <string name="rs_0_income_table_month">Rs. 0</string>
    <string name="rs_0_income_table_extra">Rs. 0</string>
    <string name="incomegoal_icon">incomegoal_icon</string>
    <string name="income_goals_txt">Income Goals</string>
    <string name="incometoday_icon">incometoday_icon</string>
    <string name="today_income_txt">Today</string>
    <string name="incomeweek_icon">incomeweek_icon</string>
    <string name="this_week_income">This Week</string>
    <string name="incomemonth_icon">incomemonth_icon</string>
    <string name="this_month_income_txt">This Month</string>
    <string name="incomeanalytics_icon">incomeanalytics_icon</string>
    <string name="incomeanalytics_txt">Analytics</string>
    <string name="history_txt">History</string>
    <string name="incomehistory_icon">incomehistory_icon</string>
    <string name="incomeplusreddis">incomeplusredDIS</string>
    <string name="login">Login</string>
</resources>