<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backmain"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center_horizontal"
            android:shadowColor="#90373409"
            android:shadowDx="65"
            android:shadowDy="67"
            android:shadowRadius="90"
            android:text="@string/login"
            android:textAlignment="center"
            android:textColor="#F6F6F6"
            android:textSize="50sp"
            android:textStyle="bold" />


        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:contentDescription="@string/logo"
            android:src="@drawable/piggybank" />

        <TextView
            android:id="@+id/appname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="1dp"
            android:text="@string/rs_fy"
            android:textColor="#333333"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/appDiscrption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:text="@string/my_personal_budgeting_app"
            android:textColor="#333333"
            android:textSize="15sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:autofillHints="enter_email"
            android:hint="@string/enter_email"
            android:inputType="textEmailAddress"
            android:textColor="#333333"
            android:textColorHint="#AEBAB9"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="5dp"
            android:autofillHints="password"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="#333333"
            android:textColorHint="#AEBAB9"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/loginbtn"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:background="@drawable/button_save_form"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/loginQn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:text="@string/don_t_have_an_account_signup"
            android:textColor="#030707"
            android:textSize="15sp"
            android:textStyle="bold" />

    </LinearLayout>


</androidx.core.widget.NestedScrollView>