<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IncomeActivity"
    android:background="@drawable/incomedis2">



    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="1dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        />
    <TextView
        android:id="@+id/txtbelowtoolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:text="@string/my_income"
        android:textColor="#FFFFFF"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textStyle="bold"
        android:gravity="center_horizontal" />
    <TableLayout
        android:id="@+id/ihometable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="10dp"
        android:layout_below="@+id/txtbelowtoolbar">


        <TableRow android:background="@drawable/table_income_raw_1"
            android:layout_marginBottom="2sp">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/goal_income_table"
                android:textColor="#FFF"
                android:gravity="center"
                android:textStyle="bold"
                android:padding="5dp"
                android:textSize="18sp"/>
            <TextView

                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/today_income_table"
                android:textColor="#FFF"
                android:gravity="center"
                android:textStyle="bold"
                android:padding="5dp"
                android:textSize="18sp"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/week_income_table"
                android:textColor="#FFF"
                android:gravity="center"
                android:textStyle="bold"
                android:padding="5dp"
                android:textSize="18sp"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/month_income_table"
                android:textColor="#FFF"
                android:gravity="center"
                android:textStyle="bold"
                android:padding="5dp"
                android:textSize="18sp"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/extra_income_table"
                android:textColor="#FFF"
                android:gravity="center"
                android:textStyle="bold"
                android:padding="5dp"
                android:textSize="18sp"/>


        </TableRow>

        <TableRow android:background="@drawable/table_income_raw_2">
            <TextView
                android:id="@+id/ihomegoalTv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/rs_0_income_table_goal"
                android:textColor="#FFF"
                android:gravity="center"
                android:textStyle="bold"
                android:padding="5dp"
                android:textSize="15sp"/>
            <TextView
                android:id="@+id/ihometodayTv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/rs_0_income_table_today"
                android:textColor="#FFF"
                android:gravity="center"
                android:textStyle="bold"
                android:padding="5dp"
                android:textSize="15sp"/>

            <TextView
                android:id="@+id/ihomeweekTv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/rs_0_income_table_week"
                android:textColor="#FFF"
                android:gravity="center"
                android:textStyle="bold"
                android:padding="5dp"
                android:textSize="15sp"/>

            <TextView
                android:id="@+id/ihomemonthTv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/rs_0_income_table_month"
                android:textColor="#FFF"
                android:gravity="center"
                android:textStyle="bold"
                android:padding="5dp"
                android:textSize="15sp"/>

            <TextView
                android:id="@+id/ihomeextraTv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/rs_0_income_table_extra"
                android:textColor="#FFF"
                android:gravity="center"
                android:textStyle="bold"
                android:padding="5dp"
                android:textSize="15sp"/>


        </TableRow>
    </TableLayout>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/ihomecoordinator"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/ihometable">
        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/ihomegridLayout"
            android:rowCount="3"
            android:columnCount="2"
            android:layout_marginBottom="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/ihomegoalcardView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="0"
                android:layout_gravity="fill"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_margin="8dp"
                android:background="#FFF"
                app:cardCornerRadius="15dp"
                app:cardElevation="15dp"
               >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_gravity="center_horizontal|center_vertical"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:src="@drawable/incomegoal"
                        android:contentDescription="@string/incomegoal_icon" />



                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/income_goals_txt"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:textColor="#333"
                        android:shadowDx="5"
                        android:shadowDy="7"
                        android:shadowRadius="80"
                        android:gravity="center_horizontal"/>


                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/ihometodaycardView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="1"
                android:layout_gravity="fill"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_margin="8dp"
                android:background="#FFF"
                app:cardCornerRadius="15dp"
                app:cardElevation="15dp"
               >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_gravity="center_horizontal|center_vertical"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:src="@drawable/incometoday"
                        android:contentDescription="@string/incometoday_icon" />



                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/today_income_txt"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:textColor="#333"
                        android:gravity="center_horizontal"/>


                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/ihomeweekcardView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="1"
                android:layout_column="0"
                android:layout_gravity="fill"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_margin="8dp"
                android:background="#FFF"
                app:cardCornerRadius="15dp"
                app:cardElevation="15dp"
               >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_gravity="center_horizontal|center_vertical"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:src="@drawable/incomeweek"
                        android:contentDescription="@string/incomeweek_icon" />



                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/this_week_income"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:textColor="#333"
                        android:gravity="center_horizontal"/>


                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/ihomemonthcardView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="1"
                android:layout_column="1"
                android:layout_gravity="fill"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_margin="8dp"
                android:background="#FFF"
                app:cardCornerRadius="15dp"
                app:cardElevation="15dp"
               >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_gravity="center_horizontal|center_vertical"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:src="@drawable/incomemonth"
                        android:contentDescription="@string/incomemonth_icon" />



                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/this_month_income_txt"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:textColor="#333"
                        android:gravity="center_horizontal"/>


                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/ihomeanlyticscardView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="2"
                android:layout_column="0"
                android:layout_gravity="fill"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_margin="8dp"
                android:background="#FFF"
                app:cardCornerRadius="15dp"
                app:cardElevation="15dp"
               >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_gravity="center_horizontal|center_vertical"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:src="@drawable/incomeanalytics"
                        android:contentDescription="@string/incomeanalytics_icon" />



                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/incomeanalytics_txt"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:textColor="#333"
                        android:gravity="center_horizontal"/>


                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/ihomehistorycardView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="2"
                android:layout_column="1"
                android:layout_gravity="fill"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_margin="8dp"
                android:background="#FFFFFF"
                app:cardCornerRadius="15dp"
                app:cardElevation="15dp"
                >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_gravity="center_horizontal|center_vertical"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:src="@drawable/incomehistory"
                        android:contentDescription="@string/incomehistory_icon" />



                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/history_txt"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:textColor="#333"
                        android:gravity="center_horizontal"/>


                </LinearLayout>
            </androidx.cardview.widget.CardView>


        </GridLayout>

        <LinearLayout
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom"
            android:orientation="vertical"
            app:layout_anchor="@+id/ihomegridLayout"
            app:layout_anchorGravity="center">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:layout_margin="10dp"
                android:backgroundTint="#FF1505"
                android:scaleType="centerCrop"
                android:src="@drawable/incomeplusred"
                app:fabCustomSize="70dp"
                android:contentDescription="@string/incomeplusreddis"
                 />
        </LinearLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>




</RelativeLayout>